--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,12 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
 		<link rel="manifest" href="%sveltekit.assets%/manifest.json" />
+		<meta name="theme-color" content="#fff" />
 		<meta name="viewport" content="width=device-width" />
+		<meta
+			name="description"
+			content="Experience seamless team creation with Easy Teams, a unique app designed to instantly generate balanced teams from your player list. Perfect for coaches, trainers, and event organizers seeking efficient team-making solutions."
+		/>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
